--- a/portfolio/src/SingleProject/SingleProject.css
+++ b/portfolio/src/SingleProject/SingleProject.css
@@ -13,7 +13,7 @@
 .box img {
     border-radius: 5px;
     height: 140px;
-    width: 100%;
+    width: 250px;
 }
 
 /* Default styles for .progres */
