--- a/portfolio/src/Headercomponents/Header.css
+++ b/portfolio/src/Headercomponents/Header.css
@@ -5,8 +5,8 @@
   height: 93vh;
   margin: 0;
   padding: 0;
-  background-color: #1c1b22;
-  margin: 2%;
+  background-color: #17161d;
+  margin:2% 0;
 }
 .title {
   padding: 1% 3%;
@@ -23,7 +23,7 @@
   margin: 10% 0;
   font-size: regular;
   font-family: 'Montserrat', sans-serif;
-  color: 	#6c6a6a;
+  color: 	#8c859e;
 }
 .navbars ul a:focus {
   font-weight: normal;
