--- a/portfolio/src/Projectindividual/Project.css
+++ b/portfolio/src/Projectindividual/Project.css
@@ -1,43 +1,57 @@
-.projectimage {
-  width: 20vw;
-  cursor: pointer;
-}
 .projectimage img {
-  width: 20vw;
-}
-.custom-shadow {
-  box-shadow: 0 2px 2px rgba(240, 240, 240, 0.5);
+  width: 370px;
 }
 .projectone {
-  max-width: 20vw;
+  display: flex;
+  width: 90%;
   height: 100%;
-  border-radius: 2%;
   font-family: "Montserrat", sans-serif;
   text-align: center;
   color: #aaa7a7;
   margin-left: 2%;
+  border: 0.5px solid rgb(49, 48, 48);
 }
 .projectoveriew{
+  width: 35vw;
   font-size: medium;
-}
-.h {
-  color: #aaa7a7;
 }
 @media screen and (max-width: 1010px) {
   .projectone {
-    max-width: 30vw;
+    display: flex;
+    flex-direction: column;
+    max-width: 50vw;
     height: 100%;
     border-radius: 2%;
     font-family: "Montserrat", sans-serif;
     text-align: center;
     color: #aaa7a7;
   }
-  .projectimage {
-    width: 30vw;
-    cursor: pointer;
-  }
   .projectimage img {
-    width: 30vw;
+    width: 50vw;
+  }
+  .projectoveriew {
+    font-size: small;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .projectone {
+    max-width: 50vw;
+    height: 100%;
+    border-radius: 2%;
+    font-family: "Montserrat", sans-serif;
+    text-align: center;
+    color: #aaa7a7;
+  }
+  /* .projectimage {
+    display: flex;
+    align-items: center;
+   
+    width: 70vw;
+    cursor: pointer;
+  } */
+  .projectimage img {
+    width: 50vw;
   }
   .projectoveriew {
     font-size: small;
@@ -52,10 +66,6 @@
     text-align: center;
     color: #aaa7a7;
     
-  }
-  .projectimage {
-    width: 50vw;
-    cursor: pointer;
   }
   .projectimage img {
     width: 50vw;
