--- a/portfolio/src/Projects/Projects.css
+++ b/portfolio/src/Projects/Projects.css
@@ -1,19 +1,35 @@
 .singlepost {
     display: flex;
     margin: 4%;
-    
+   
   }
   .singleproject{
     display: flex;
     flex-wrap: wrap;
     margin-left:3% ; 
+    
   }
-
+  @media screen and (max-width: 920px) {
+    .singleproject {
+      display: flex;
+        /* display: block; */
+        margin: 10%;
+        /* width: 100%; */
+        font-size: small;
+      }
+      .singlepost {
+        display: flex;
+        /* display: block; */
+        margin: 10%;
+        /* width: 100%; */
+        font-size: small;
+      }
+   }
 
 
 
   
-  @media screen and (max-width: 620px) {
+  @media screen and (max-width: 720px) {
     .singleproject {
         display: block;
         margin: 10%;
@@ -21,8 +37,9 @@
         font-size: small;
       }
       .singlepost {
-        display: flex;
+        display: block;
         margin: 10%;
-        flex-wrap: wrap;
+        /* width: 100%; */
+        font-size: small;
       }
    }
