--- a/portfolio/src/Headercomponents/Header.css
+++ b/portfolio/src/Headercomponents/Header.css
@@ -8,31 +8,31 @@
   background-color: #17161d;
   margin:2% 0;
 }
+
+
 .title {
   padding: 1% 3%;
   font-family: Billabong;
   background-color: #14131A;
 }
-.navbars ul {
-  padding: 2% 3%;
-}
+
 .navbars ul li {
-  list-style: none;
+  /* list-style: none;
   cursor: pointer;
   padding: 3% 19%;
   margin: 10% 0;
   font-size: regular;
   font-family: 'Montserrat', sans-serif;
-  color: 	#8c859e;
+  color: 	#8c859e; */
 }
-.navbars ul a:focus {
+/* .navbars ul a:focus {
   font-weight: normal;
-}
-.navbars ul li:hover {
+} */
+/* .navbars ul li:hover {
     background-color: #212027;
   border-radius: 5%;
-  color: 	rgb(243, 243, 243);
-}
+  color: 	rgb(243, 243, 243); */
+/* } */
 @media screen and (max-width: 1210px) {
   .navbars ul li{
    font-size:small;
